Fixed unit tests to work with spark